# sami2py

./: .appveyor.yml  .codeclimate.yml  .coveragerc  .gitignore  .gitignore.swp  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  License.md  MANIFEST.in  Makefile  README-1.00  README-1.00.txt  README.md  README.rst  Solar_Min_Changes.txt  alf.mod  apexcord.mod  com-1.00.inc  dwm.mod  dwm_module.mod  euvflux.inp  exb.inp  gd2qdc.mod  grid-1.00.f  grid-rminrmax.f  hwm.mod  hwm07e_modified.f90  ichem.inp  makesami2low-100  newmodel.mod  nrlmsise00low.f  param-1.00.inc  phabsdt.inp  phiondt.inp  qwm.mod  requirements.txt  (+11 more)
.github/: pull_request_template.md
.github/workflows/: docs.yml  main.yml  pythonpackage.yml
docs/: Solar_Min_Changes.txt  conf.py  index.rst  installation.rst  introduction.rst  modifications.rst  requirements.txt  sample_workflow.rst
exb/lon000/2012_210/: exb.inp  sami2py-1.00.namelist  version.txt
fortran/: Makefile  README-1.00  com-1.00.inc  deni-init.inp  param-1.00.inc  sami2low-1.00.namelist  thetant.inp
run_name/lon000/2012_210/: sami2py-1.00.namelist  version.txt
sami2py/: __init__.py  _core.py  _core_class.py  _generate_path.py  common.py  model.py  models.py  run_model.py  utils.py
sami2py/fortran/: Makefile  README-1.00  README.md  com-1.00.inc  exb.inp  grid-1.00.f  hwm93.f  nrlmsise00_mod.f  nrlmsise00_modified.f  phionnt.inp  sami2low-1.00.f  sami2low-1.00.namelist  sami2py-1.00.f  sami2py-1.00.namelist
sami2py/tests/: __init__.py  test_core.py  test_core_class.py  test_model.py  test_run_model.py  test_utils.py
sami2py/tests/test_data/: ref_u_sami2py-1.00.namelist  reference_sami2low-1.00.namelist  reference_sami2py-1.00.namelist  sami2py_output.nc
sami2py/tests/test_data/test/lon256/1999_256/: exb.inp  sami2py-1.00.namelist  version.txt
sami2py/tests/test_data/test/lon256/1999_257/: sami2py-1.00.namelist  version.txt
