[metadata]
name = sami2py
version = 0.2.0-dev
url = https://github.com/jklenzing/sami2py
author = Jeff Klenzing
author_email = jeffrey.klenzing@nasa.gov
description = Generate, read, and plot SAMI2 model runs
keywords =
  SAMI2
  ionosphere
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Physics
  Intended Audience :: Science/Research
  License :: BSD
  Natural Language :: English
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Operating System :: OS Independent
license_file = License.md
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
setup_requires =
  setuptools >= 38.6
  pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  numpy
  pandas
  xarray
  matplotlib
scripts =
